--- a/domat/Makefile
+++ b/domat/Makefile
@@ -1,2 +1,7 @@
-all:
-	gcc domates.c && ./a.out
+LIBFILE = ../libft
+
+all: libft
+	gcc domates.c $(LIBFILE)/libft.a && ./a.out
+
+libft:
+	make -C $(LIBFILE)
